# Blaise-Pascal

./: .gitattributes  .gitignore  CMakeLists.txt  CmakeScript.cmake  README.md  addition.c  addition.h  build.sh  division.c  division.h  generate_config.py  main.c  multiplication.c  multiplication.h  subtraction.c
.github/workflows/: cmake-single-platform.yml
lib/Power/: CMakeLists.txt
lib/Power/inc/: power.h
lib/Power/src/: power.c
lib/addition/: CMakeLists.txt
lib/addition/inc/: addition.h
lib/addition/src/: addition.c
lib/divsion/: CMakeLists.txt
lib/divsion/inc/: division.h
lib/divsion/src/: division.c
lib/multiplication/: CMakeLists.txt
lib/multiplication/inc/: multiplication.h
lib/multiplication/src/: multiplication.c
lib/remainder/: CMakeLists.txt
lib/remainder/inc/: remainder.h
lib/remainder/include/: remainder.h
lib/remainder/src/: remainder.c
lib/subtraction/: CMakeLists.txt
lib/subtraction/inc/: subtraction.h
lib/subtraction/src/: subtraction.c
src/: main.c
